--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
       - mynet
   myphp:
     build: 
-      context: ./src/php
+      context: ./assignment/php
     restart: always
     expose:
       - 9000
     volumes:
-      -./src:/var/www/html
+      -./assignment:/var/www/html
     depends_on:
       - mysql
     networks:
@@ -28,8 +28,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./src:/var/www/html
-      - ./src/nginx.ini:/etc/nginx/conf.d/default.conf
+      - ./assignment:/var/www/html
+      - ./assignment/nginx.ini:/etc/nginx/conf.d/default.conf
     depends_on:
       - myphp
     networks:
